--- a/Kafka_Producer/Kafka_Producer.csproj
+++ b/Kafka_Producer/Kafka_Producer.csproj
@@ -2,11 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>Kafka_Client</RootNamespace>
+    <RootNamespace>Kafka_Producer</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Confluent.Kafka" Version="1.7.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
 </Project>
